--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
           <li><a href="#">
-            <img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
+            <img src="./images/facebook_color_white.svg" alt="Фэйсбук" class="footer__social-icon">Facebook</a>
           </li>
           <li><a href="#">
             <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">Вконтакте</a>
           </li>
           <li><a href="#">
-            <img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
+            <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a>
           </li>
         </ul>
       </div>
