--- a/index.html
+++ b/index.html
@@ -85,47 +85,47 @@
       <p class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</p>
       <div class="table table_theme_dark">
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">1</h2>
+          <h3 class="table__heading table__heading_theme-dark">1</h3>
           <p class="table__text table__text_theme-dark">Выберите привлекательный проект.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">2</h2>
+          <h3 class="table__heading table__heading_theme-dark">2</h3>
           <p class="table__text table__text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">3</h2>
+          <h3 class="table__heading table__heading_theme-dark">3</h3>
           <p class="table__text table__text_theme-dark">Определите целевой уровень мастерства.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">4</h2>
+          <h3 class="table__heading table__heading_theme-dark">4</h3>
           <p class="table__text table__text_theme-dark">Разбейте навык на элементы.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">5</h2>
+          <h3 class="table__heading table__heading_theme-dark">5</h3>
           <p class="table__text table__text_theme-dark">Приготовьте всё необходимое для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">6</h2>
+          <h3 class="table__heading table__heading_theme-dark">6</h3>
           <p class="table__text table__text_theme-dark">Устраните препятствия для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">7</h2>
+          <h3 class="table__heading table__heading_theme-dark">7</h3>
           <p class="table__text table__text_theme-dark">Выделите специальное время для занятий.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">8</h2>
+          <h3 class="table__heading table__heading_theme-dark">8</h3>
           <p class="table__text table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">9</h2>
+          <h3 class="table__heading table__heading_theme-dark">9</h3>
           <p class="table__text table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
         </div>
         <div class="table__cell table__cell_theme-dark">
-          <h2 class="table__heading table__heading_theme-dark">10</h2>
+          <h3 class="table__heading table__heading_theme-dark">10</h3>
           <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
-      <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
+      <div class="kaufman__triangle"></div>
     </section>
   </main>
   <footer class="footer">
@@ -136,28 +136,28 @@
         </div>
         <p class="footer__author">© Виктор Абанькин</p>
       </div>
-      <div class="footer__column footer__column_content-info">
+      <nav class="footer__column footer__column_content-info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Концепция</a></li>
-          <li><a href="#">Наставники</a></li>
+          <li><a href="#" class="footer__link">Главная</a></li>
+          <li><a href="#" class="footer__link">Концепция</a></li>
+          <li><a href="#" class="footer__link">Наставники</a></li>
         </ul>
-      </div>
-      <div class="footer__column footer__column_content-social">
+      </nav>
+      <nav class="footer__column footer__column_content-social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
-          <li><a href="#">
+          <li><a href="#" class="footer__link">
             <img src="./images/facebook_color_white.svg" alt="Фэйсбук" class="footer__social-icon">Facebook</a>
           </li>
-          <li><a href="#">
+          <li><a href="#" class="footer__link">
             <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">Вконтакте</a>
           </li>
-          <li><a href="#">
+          <li><a href="#" class="footer__link">
             <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a>
           </li>
         </ul>
-      </div>
+      </nav>
     </div>
   </footer>
   </div>
