--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
       <nav class="footer__column footer__column_content-info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a href="#" class="footer__link">Главная</a></li>
-          <li><a href="#" class="footer__link">Концепция</a></li>
-          <li><a href="#" class="footer__link">Наставники</a></li>
+          <li><a href="#" class="footer__column-link">Главная</a></li>
+          <li><a href="#" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" class="footer__column-link">Наставники</a></li>
         </ul>
       </nav>
       <nav class="footer__column footer__column_content-social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
-          <li><a href="#" class="footer__link">
+          <li><a href="#" class="footer__column-link">
             <img src="./images/facebook_color_white.svg" alt="Фэйсбук" class="footer__social-icon">Facebook</a>
           </li>
-          <li><a href="#" class="footer__link">
+          <li><a href="#" class="footer__column-link">
             <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">Вконтакте</a>
           </li>
-          <li><a href="#" class="footer__link">
+          <li><a href="#" class="footer__column-link">
             <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a>
           </li>
         </ul>
