--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./page/index.css">
 </head>
 <body>
   <div class="page">
@@ -17,7 +16,7 @@
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a class="header__link" href=#>Узнать →</a></p>
     <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
-    <div class="header__square-pic"></div> 
+    <div class="header__square-pic rotation"></div> 
   </header>
   <main class="content">
     <section class="description">
@@ -30,6 +29,65 @@
           </p>
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
         </div>
+      </div>
+    </section>
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+      <div class="cards">
+        <div class="cards__item">
+          <img src="./images/images_sprint-2/cards-attention.png" alt="Два вида внимания" class="cards__image">
+          <h3 class="cards__title">Два вида внимания</h3>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/images_sprint-2/cards-recall.png" alt="Вспоминайте изученное" class="cards__image">
+          <h3 class="cards__title">Recall</h3>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/images_sprint-2/cards-interliving.png" alt="Интерливинг" class="cards__image">
+          <h3 class="cards__title">Интерливинг</h3>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/images_sprint-2/cards-question.png" alt="Вопросы" class="cards__image">
+          <h3 class="cards__title">Вопросы</h3>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+        </div>
+        <div class="cards__item">
+          <img src="./images/images_sprint-2/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
+          <h3 class="cards__title">Иллюзия компетентности</h3>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+        </div>
+      </div>
+    </section>
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+      <div class="video__iframes">
+        <div class="video__iframe">
+          <iframe id="ytplayer1" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+        </div>
+        <div class="video__iframe">
+          <iframe id="ytplayer2" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        </div>
+      </div>
+    </section>
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
+      <a class="feynman__link" href=#>Подробнее →</a>
+      <div class="feynman__main-illustration">
+        <img src="./images/feynman.png" alt="Фейнман">
       </div>
     </section>
     <section class="digits">
@@ -72,12 +130,17 @@
         </div>
       </div>
     </section>
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a class="feynman__link" href=#>Подробнее →</a>
-      <div class="feynman__main-illustration">
-        <img src="./images/feynman.png" alt="Фейнман">
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        <div class="khan__book-container">
+          <div class="khan__book-pic"></div>
+          <a href="#" class="khan__buy-link">Купить книгу →</a>
+        </div>
       </div>
     </section>
     <section class="kaufman">
@@ -125,7 +188,25 @@
           <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
+    </section>
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <div class="resources__logo-zone">
+        <a href="#" class="resources__link">
+          <img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="./images/images_sprint-2/logo/resources-n1.svg" alt="Н+1" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+        </a>        
+      </div>
     </section>
   </main>
   <footer class="footer">
