--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="logo logo_place_header"></div>
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a class="header__link" href=#>Узнать &rarr;</a></p>
+      <a class="header__link" href="#">Узнать &rarr;</a></p>
     <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
     <div class="header__square-pic rotation"></div> 
   </header>
@@ -79,7 +79,7 @@
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a class="feynman__link" href=#>Подробнее &rarr;</a>
+      <a class="feynman__link" href="#">Подробнее &rarr;</a>
       <div class="feynman__main-illustration"></div>
     </section>
     <section class="digits">
